<resources>
    <string name="app_name">Nutrition App</string>
    <string name="food_name">Nama Makanan</string>
    <string name="description">Deskripsi</string>
    <string name="about">Tentang</string>
    <string name="object_received">Data diterima</string>
    <string name="name">Dwi Mega Hutami</string>
    <string name="email">dwimegah.dm@gmail.com</string>
    <string name="cat">Kategori Makanan</string>
    <string name="food_category">Kategori</string>
    <string name="gizi">Kandungan Gizi</string>
    <string name="food_nutrition">Gizi</string>
    <string-array name="data_name">
        <item>Telur</item>
        <item>Salmon</item>
        <item>Ayam</item>
        <item>Daging</item>
        <item>Bayam</item>
        <item>Wortel</item>
        <item>Buncis</item>
        <item>Tomat</item>
        <item>Alpukat</item>
        <item>Jeruk</item>
    </string-array>
    <string-array name="data_description">
        <item>Telur adalah salah satu sumber protein hewani yang memiliki rasa yang lezat, mudah dicerna, dan bergizi tinggi. </item>
        <item>Salmon merupakan ikan dari famili Salmonidae, salah satu jenis ikan berminyak yang hidup di Samudera Atlantik dan Samudera Pasifik. </item>
        <item>Daging ayam adalah daging yang paling populer di seluruh dunia. Daging ini didapatkan dari ayam ternak yaitu unggas yang paling banyak diternak di dunia. </item>
        <item>Daging adalah bagian lunak pada hewan yang terbungkus kulit dan melekat pada tulang yang menjadi bahan makanan. </item>
        <item>Bayam adalah tumbuhan yang biasa ditanam untuk dikonsumsi daunnya sebagai sayuran hijau. </item>
        <item>Wortel adalah tumbuhan biennial yang menyimpan karbohidrat dalam jumlah besar untuk tumbuhan tersebut berbunga pada tahun kedua. </item>
        <item>Buncis, adalah sejenis polong-polongan yang dapat dimakan dari berbagai kultivar Phaseolus vulgaris. </item>
        <item>Tomat atau rangam adalah tumbuhan dari keluarga Solanaceae, tumbuhan asli Amerika Tengah dan Selatan, dari Meksiko sampai Peru. </item>
        <item>Alpukat (Persea Americana) merupakan salah satu buah lokal yang banyak dikembangkan di Indonesia. Buah Alpukat yang sudah sangat dikenal dan digemari oleh masyarakat. </item>
        <item>Jeruk adalah buah yang memiliki bentuk yang bulat dan kulit yang berwarna oranye. </item>
    </string-array>
    <string-array name="data_photo">
        <item>https://cdn.britannica.com/94/151894-050-F72A5317/Brown-eggs.jpg</item>
        <item>https://s3-publishing-cmn-svc-prd.s3.ap-southeast-1.amazonaws.com/article/eDJJh466gCD5jIdAlCxqO/original/032896000_1601375426-Inilah-Manfaat-Makan-Ikan-Salmon-shutterstock_1480384073.jpg</item>
        <item>https://xplodcompany.files.wordpress.com/2018/02/pemasok-daging-ayam-di-solo.jpg</item>
        <item>https://asset.kompas.com/crops/cTJhF5bbznVnG2RixUGIHPhlKJo=/100x97:900x630/750x500/data/photo/2021/12/28/61caa10d78057.jpg</item>
        <item>https://rakyatempatlawang.disway.id/upload/4d48c0081defb1379a875cc596bddc48.jpg</item>
        <item>https://cdn1-production-images-kly.akamaized.net/BGDIsjuMHSz_TriGaYkSw2wzDzg=/1200x675/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/1694314/original/037316800_1503982212-067002300_1483451648-Makan-Wortel-Bikin-Sakit-Kuning.jpg</item>
        <item>https://res.cloudinary.com/dk0z4ums3/image/upload/v1645002933/attached_image/manfaat-buncis-ternyata-lebih-kaya-daripada-sayuran-kacang-sejenis.jpg</item>
        <item>https://d1vbn70lmn1nqe.cloudfront.net/prod/wp-content/uploads/2022/02/18053252/sebenarnya-tomat-buah-atau-sayur-ketahui-faktanya-halodoc.jpg.webp</item>
        <item>https://d1vbn70lmn1nqe.cloudfront.net/prod/wp-content/uploads/2022/01/10053526/Ini-Manfaat-Buah-Alpukat-untuk-Kesehatan-01.jpg.webp</item>
        <item>https://www.astronauts.id/blog/wp-content/uploads/2022/12/Agar-Tidak-Salah-Ini-Cara-Memilih-Jeruk-yang-Manis.jpg</item>
    </string-array>
    <string-array name="data_category">
        <item>Hewani</item>
        <item>Hewani</item>
        <item>Hewani</item>
        <item>Hewani</item>
        <item>Nabati</item>
        <item>Nabati</item>
        <item>Nabati</item>
        <item>Nabati</item>
        <item>Nabati</item>
        <item>Nabati</item>
    </string-array>
    <string-array name="data_nutrition">
        <item>Satu telur ayam mengandung kira-kira 70 kalori dan beragam nutrisi berikut : Lemak : 5 gram, Protein : 6 gram, Natrium : 60 miligram, Kalsium : 25 miligram, Kalium : 60 miligram, Kolin : 140 miligram.</item>
        <item>Menurut sejumlah penelitian, 100 gram ikan salmon mampu mengandung omega 3 hingga 2,018 mg. Omega 3 sendiri merupakan salah satu nutrisi penting bagi otak. Adapun nutrisi lain yang terkandung dalam ikan salmon adalah protein, kalsium, vitamin B12, dan kalium.</item>
        <item>Ayam banyak mengandung vitamin B6, yang yang diperlukan tubuh untuk memetabolisme karbohidrat, lemak dan protein, memproduksi sel darah merah, serta memperkuat sistem kekebalan tubuh. Ayam bisa memberikan Anda hampir 36% dari seluruh kebutuhan harian vitamin B6.</item>
        <item>Daging sapi kaya dengan protein, yang berperan dalam membantu pertumbuhan otot dan mendukung massa otot. Mengandung zat besi dan 4 vitamin esensial seperti niasin, riboflavin, vitamin B6 dan B12 yang bagus untuk mengurangi kelelahan dan keletihan.</item>
        <item>Bayam mengandung beta karoten dan vitamin C yang aktif berperan dalam perlindungan terhadap perkembangan sel kanker. Selain beta karoten dan vitamin C, zat yang mampu mencegah kanker adalah klorofil. Klorofil ini efektif sebagai penahan efek karsinogenik dari amina heterosilik.</item>
        <item>Wortel mengandung beta karoten, serat, dan air yang cukup tinggi. Mengonsumsi wortel secara rutin dapat membantu menjaga kesehatan mata dan sistem pencernaan menjadi lebih optimal.</item>
        <item>Buncis terkenal dengan sayuran yang memiliki kandungan kalori, serat, protein, karbohidrat, vitamin C, K, A, dan folat. Tidak hanya itu, buncis juga mengandung magnesium, zat besi, potasium, fosfor, hingga kalsium.</item>
        <item>Tomat merupakan buah yang memilki warna merah menarik serta kaya akan kandungan vitamin seperti vitamin C.</item>
        <item>Alpukat mengandung nutrisi, kaya serat, vitamin dan mineral seperti vitamin B, vitamin K, kalium, tembaga, vitamin E, dan vitamin C.</item>
        <item>Buah berwarna oranye ini mengandung asam askorbat (vitamin C) dan asam sitrat yang tinggi. Kedua jenis asam pada jeruk ini memiliki manfaat berupa meningkatkan penyerapan zat besi pada saluran pencernaan.</item>
    </string-array>
</resources>